Translations: update brushlib, fix broken string
Closes mypaint/mypaint#426: this commit fixes an exception at startup
caused by a bad translation of the footer zoom and rotation string.

Update to the latest set of brushlib translations.

--- a/po/it.po
+++ b/po/it.po
@@ -3297,8 +3297,8 @@ msgid ""
 "Z: {scale:.1f}%\n"
 "R: {rotation:+.1f}°"
 msgstr ""
-"Z: {scala:.1f}%\n"
-"R: {rotazione:+.1f}°"
+"Z: {scale:.1f}%\n"
+"R: {rotation:+.1f}°"
 
 #: ../po/tmp/mypaint.glade.h:10
 msgctxt "footer: context picker button: tooltip"
